package logic.item;

public class PalBall extends BaseCapture {

	public PalBall(int quantity) {
		super("Palball", "Lowest rate for capture Pal.", 1, quantity);
		// TODO Auto-generated constructor stub
	}

}
