package logic.item;

public class PokeBall extends BaseCapture {

	public PokeBall(int quantity) {
		super("PokeBall", "Highest rate for capture Pal.", 2, quantity);
		// TODO Auto-generated constructor stub
	}

}
